# gaussian-splatting-Windows-2

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  calculator.html
.github/workflows/: verify-structure.yml
docs/: DEVELOPMENT.md  GIT_WORKFLOW.md
docs/mesh2splat/: BUILD_WINDOWS.md  CLONE_AND_BUILD.md  MACOS_BUILD.md  MACOS_SOURCE_CHANGES.md  MVP_ACCEPTANCE.md  README.md  WINDOWS_QUICKSTART.md  WINDOWS_SETUP.md
mesh2splat/: CITATION.cff  CMakeLists.txt  README.md  run_build_debug.bat  run_build_release.bat
mesh2splat/src/imGuiUi/: ImGuiUi.hpp
mesh2splat/src/renderer/renderPasses/: RenderContext.hpp
mesh2splat/src/utils/: glUtils.hpp  utils.cpp  utils.hpp
patches/: mesh2splat-cmake-macos.patch
scripts/: mesh2splat-macos-build.sh  mesh2splat-macos-patch.sh  mesh2splat-win-build.ps1
